# litespd-gl

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
dev/: CMakeLists.txt  lgl.cpp  lgl.h
dev/env/: alias.bash.txt  alias.powershell.txt  bootstrap.sh  env.ps1  env.rc  requirements.txt
dev/sample/: CMakeLists.txt  hello-world.cpp  simple-triangle.cpp  warp-grid.cpp
dev/test/: CMakeLists.txt
inc/litespd-gl/: litespd-gl.cpp  litespd-gl.h
